# aibot

./: .env.example  .gitignore  README.md  celery_worker.py  pyproject.toml  requirements.txt  run_celery.sh
app/: config.py  database.py  logging_config.py  main.py  models.py  tasks.py  utils.py
app/ai/: generator.py  openai_client.py
app/api/: endpoints.py  schemas.py
app/news_parser/: habr.py  http_client.py  sites.py  telegram.py  utils.py
app/telegram/: bot.py  publisher.py
