[project]
name = "aibot"
version = "0.1.0"
description = ""
authors = [
    {name = "ASM4YAR",email = "asm4yar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "openai (>=2.15.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=7.1.0,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "telethon (>=1.42.0,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
